crates/usd-pyo3/tests/usdValidation/bin/usdchecker/testUsdChecker/bad/noDefaultPrim.usda
version https://git-lfs.github.com/spec/v1
oid sha256:b0e3ca6a64f7e282d605bbbdece4e1b378e762b1aa842f4d2185e2666cb5b8a4
size 80
